--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,3 @@
-* メールアドレスの代わりに、サイトアドレスを使用してログインできるようになりました。
+* 大きなテキストサイズに対するサポート機能が向上しました。
+* ユーザーによってオーダーリストが読み込まれないバグが修正されました。
+* iOS 12.0以降をサポートするようアプリを更新しました。
