--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,3 @@
-* Je kunt nu inloggen met een site-adres in plaats van met je e-mailadres.
+* Ondersteuning voor grote tekstformaten is verbeterd.
+* Bug opgelost waarbij de bestellijst niet werd geladen voor sommige gebruikers.
+* De app is bijgewerkt en ondersteunt nu iOS 12.0 en hoger.
