--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,3 @@
-* 이제 이메일 주소 대신 사이트 주소를 사용하여 로그인할 수 있습니다.
+* 큰 텍스트 크기에 대한 지원이 개선되었습니다.
+* 주문 목록이 일부 사용자에게 로드되지 않는 버그가 수정되었습니다.
+* iOS 12.0 이상을 지원하도록 앱이 업데이트되었습니다.
