--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,4 +1,4 @@
-- You can now manually add shipment tracking to an Order. This feature is for users who have the Shipment Tracking plugin installed.
-- Fixed "Unable to load content" error message when viewing Top Performers for your store.
-- Fixed an issue with the Store Picker where some users are unable to continue after logging in.
-- Fixed a crash that could happen when the network connection is slow.
+* Do you use the Shipment Tracking plugin? Now you can manually add shipment tracking to orders.
+* Sometimes when you’d try to view your store’s Top Performers you’d get an “Unable to load content” error, which was an ironic lack of top performance on the app’s part. That’s fixed now.
+* If you ever tried to use the Store Picker but weren’t able to continue after logging in, that’s fixed too.
+* Occasionally, the app would crash when it had a slow network connection. Now it doesn’t, because iffy wifi should never stop you from managing your business.
